# mixagent

./: .gitignore  CHANGELOG.md  DESKTOP.md  ISSUE_LOG.md  README.md  ROADMAP.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  bootstrap.py
app/application/: __init__.py  service.py
app/domain/: __init__.py  entities.py
app/infrastructure/: database.py  repository.py  schema.sql  workspace.py
app/providers/: __init__.py  base.py  null_provider.py
app/web/: server.py
app/workflow/: __init__.py  guards.py
docs/: DESIGN_INTENT.en.md  DESIGN_INTENT.zh-CN.md
docs/release/: RELEASE_ASSET_FRAMEWORK.en.md  RELEASE_ASSET_FRAMEWORK.zh-CN.md  v0.1.2.en.md  v0.1.2.zh-CN.md
electron/: main.js  preload.js
tests/: __init__.py  test_domain.py  test_guards.py  test_providers.py  test_service.py  test_web_server.py
